After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763477 - network: Hide firewall zone combo when firewalld is not running
network: Hide firewall zone combo when firewalld is not running
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-10 20:36 UTC by Michael Catanzaro
Modified: 2016-04-11 20:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: Hide firewall zone combo when firewalld is not running (6.45 KB, patch)
2016-03-10 20:36 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-03-10 20:36:19 UTC
Currently, if firewalld is not running, then the firewall zone combo is
always insensitive. This would make sense if firewalld was great and we
were to consider it a distro bug to not have firewalld running and
enabled, then users would be able to see the option is disabled and
think "maybe my distro has done something wrong."

But in actuality, firewalld is not really great, only Fedora ships it
and we're not really recommending it to other distros. So hide the combo
if it's not running, else it's just broken on $NOTFEDORA.
Comment 1 Michael Catanzaro 2016-03-10 20:36:22 UTC
Created attachment 323664 [details] [review]
network: Hide firewall zone combo when firewalld is not running
Comment 2 Bastien Nocera 2016-04-11 18:54:23 UTC
Review of attachment 323664 [details] [review]:

I'm guessing you tested it for both cases, whether installed or not. Looks good to me.
Comment 3 Michael Catanzaro 2016-04-11 19:52:23 UTC
(In reply to Bastien Nocera from comment #2)
> Review of attachment 323664 [details] [review] [review]:
> 
> I'm guessing you tested it for both cases, whether installed or not.

Of course.
Comment 4 Michael Catanzaro 2016-04-11 20:00:49 UTC
Attachment 323664 [details] pushed as 5036ff0 - network: Hide firewall zone combo when firewalld is not running